<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddPlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/img_player"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/place_holder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/player_name"
            app:boxBackgroundMode="outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_player">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_player_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ellipsize="end"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_age_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/player_age"
            app:boxBackgroundMode="outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_player_age"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ellipsize="end"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radio_group_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_age_layout">

            <RadioButton
                android:id="@+id/radio_button_batsman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/batsman"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_button_bowler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/bowler"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_button_all_rounder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/all_rounder"
                android:textSize="16sp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/radio_group_bat_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            android:checkedButton="@id/radio_button_batsman"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group_type">

            <RadioButton
                android:id="@+id/radio_button_left_batsman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/left_hand_batsman"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_button_right_batsman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/right_hand_batsman"
                android:textSize="16sp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/radio_group_bowl_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            android:checkedButton="@id/radio_button_batsman"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group_bat_type">

            <RadioButton
                android:id="@+id/radio_button_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spin"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_button_seam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/seam"
                android:textSize="16sp" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_amount_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/sold_amount"
            app:boxBackgroundMode="outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group_bowl_type">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_sold_amount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ellipsize="end"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_amount_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>